--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,25 +6,57 @@ body{
     color: rgb(245, 255, 250);
   }
   
-  
+.content{
+  box-sizing: border-box;
+}
+
+.survey{
+color:black;
+font-size: 1.3rem;
+  }
+
+  .text{
+    font-size: 1.3rem;
+  }
+
+  .about .time .menu .comments{
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
   h1,p {
     text-align:center;
+    color:black;
   }
   
-  form{
-    background-color: rgba(45, 0, 100, 0.9);
-    color: rgb(245, 255, 250);
+  form, h1, .survey{
+    background-color:rgba(27, 27, 50, 0.8);
+    color: whitesmoke;
     width: 140vw;
     max-width: 700px;
     min-width: 350px;
     margin: 0 auto;
-    padding: 15px 15px 25px 10px;
+    padding: 30px;
+    }
+
+    #eventDate{
+      padding-bottom: 20px;
     }
   
-  input, select {
+    input, select {
+    width:100%;
+   
+  }
+
+
+  .area{
     width:100%;
   }
-  textarea{
-    margin:auto;
-    width:100%;
-  }
+
+
+#submit{
+  background-color: #37af65;
+  color:whitesmoke;
+  padding: 15px;
+  margin: auto;
+}
