--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,21 @@
+*{box-sizing: border-box;
+}
+
 body{
   background-image:url("/assets/images/catering.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
     background-attachment: fixed;
     color: rgb(245, 255, 250);
+    font-weight: 400;
+    line-height: 1.4;
+    margin:0;
   }
   
-.content{
-  box-sizing: border-box;
+div{
+  display:block;
 }
+
 
 .survey{
 color:black;
@@ -17,6 +24,11 @@ font-size: 1.3rem;
 
   .text{
     font-size: 1.3rem;
+  }
+
+  .group{
+  padding: 5px;
+  margin: 0 auto 5px auto;
   }
 
   .about .time .menu .comments{
@@ -53,10 +65,13 @@ font-size: 1.3rem;
     width:100%;
   }
 
+  label{
+    display: inline;
+  }
 
 #submit{
-  background-color: #37af65;
-  color:whitesmoke;
-  padding: 15px;
-  margin: auto;
+background-color: #37af65;
+padding: 15px;
+color: whitesmoke;
+font-weight: bold;
 }
